--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,16 +1,26 @@
 <h1>Sign up</h1>
 <%= form_for(@user) do |f| %>
-  <div class="forms">
-    <ul>
-        <li><%= f.label :name %>
-        <%= f.text_field :name %></li>
-        <li><%= f.label :email %>
-        <%= f.text_field :email %></li>
-        <li><%= f.label :password %>
-        <%= f.password_field :password %></li>
-        <li><%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation %></li>
-    </ul>
+  <ul class="forms">
+      <li>
+        <%= f.label :username %>
+        <%= f.text_field :username %>
+      </li>
+      <li>
+        <%= f.label :email %>
+        <%= f.text_field :email %>
+      </li>
+      <li>
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+      </li>
+      <li>
+        <%= f.label :password %>
+        <%= f.password_field :password %>
+      </li>
+      <li>
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation %>
+      </li>
+  </ul>
   <%= f.submit "Submit" %>
-  </div>
 <% end %>
