--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,7 +1,8 @@
+<h1><%= current_user.username %></h1>
 <section>
-<h1>Recent</h1>
-<table>
-	<% unless @recent_events.empty? %>
+<h2>Recent</h2>
+<% unless @recent_events.empty? %>
+	<table>
 		<% @recent_events.each do |event| %>
 			<tr>
 				<td><%= link_to domain_name(Domain.find(event.domain_id)), domain_path(event.domain_id) %></td>
@@ -9,16 +10,20 @@
 				<td><%= event.created_at %></td>
 			</tr>
 		<% end %>
-	<% else %>
-		<p>No recent activity.</p>
-	<% end %>
-</table>
+	</table>
+<% else %>
+	<p>No recent activity.</p>
+<% end %>
 </section>
 <section>
-<h1>Accounts</h1>
-<ol>
-	<% current_user.accounts.each do |account| %>
-		<li><%= link_to account.name, account_path(account.id) %></li>
-	<% end %>
-</ol>
+<h2>Accounts</h2>
+<% unless current_user.accounts.empty? %>
+	<ol>
+		<% current_user.accounts.each do |account| %>
+			<li><%= link_to account.name, account_path(account.id) %></li>
+		<% end %>
+	</ol>
+<% else %>
+	<p>No accounts.</p>
+<% end %>
 </section>
