--- a/app/views/domains/edit.html.erb
+++ b/app/views/domains/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>New Domain</h1>
+<h1>Edit <%= domain_name(@domain) %></h1>
 <%= form_for(@domain) do |f| %>
 <%= render 'shared/error_messages', :object => f.object %>
   <ul class="forms">
