--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>New Account</h1>
+<h1>Edit <% @account.name %></h1>
   <%= form_for(@account) do |f| %>
   <%= render 'shared/error_messages', :object => f.object %>
     <div class="forms">
